--- a/back/config/packages/security.yaml
+++ b/back/config/packages/security.yaml
@@ -1,39 +1,64 @@
 security:
-    # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
-    password_hashers:
-        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
+  password_hashers:
+    App\Entity\User: 'auto'
 
-    # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
-    providers:
-        users_in_memory: { memory: null }
+  providers:
+    app_user_provider:
+      entity:
+        class: App\Entity\User
+        property: email
 
-    firewalls:
-        dev:
-            # Ensure dev tools and static assets are always allowed
-            pattern: ^/(_profiler|_wdt|assets|build)/
-            security: false
-        main:
-            lazy: true
-            provider: users_in_memory
+  firewalls:
+    dev:
+      pattern: ^/(_(profiler|wdt)|css|images|js)/
+      security: false
 
-            # Activate different ways to authenticate:
-            # https://symfony.com/doc/current/security.html#the-firewall
+    # LOGIN API (public) -> renvoie JWT
+    login:
+      pattern: ^/api/login
+      stateless: true
+      json_login:
+        check_path: /api/login
+        username_path: email
+        password_path: password
+        success_handler: App\Security\LoginSuccessHandler
+        failure_handler: lexik_jwt_authentication.handler.authentication_failure
 
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
+    # REFRESH endpoint (public)
 
-    # Note: Only the *first* matching rule is applied
-    access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+    refresh:
+      pattern: ^/api/token/refresh
+      stateless: true
+      provider: app_user_provider
+      refresh_jwt:
+        check_path: /api/token/refresh
+      # pattern: ^/api/token/refresh
+      # stateless: true
+      # security: false
+    #   provider: app_user_provider
+    #   custom_authenticators:
+    #     - gesdinet.jwtrefreshtoken.security.refresh_token_authenticator
 
-when@test:
-    security:
-        password_hashers:
-            # Password hashers are resource-intensive by design to ensure security.
-            # In tests, it's safe to reduce their cost to improve performance.
-            Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface:
-                algorithm: auto
-                cost: 4 # Lowest possible value for bcrypt
-                time_cost: 3 # Lowest possible value for argon
-                memory_cost: 10 # Lowest possible value for argon
+    # API protégée par JWT
+    api:
+      pattern: ^/api
+      stateless: true
+      provider: app_user_provider
+      jwt: ~
+
+    # Backoffice EasyAdmin (session) - séparé de l’API
+    main:
+      lazy: true
+      provider: app_user_provider
+      # Ici tu peux mettre un form_login si tu as une page login admin
+      # sinon tu peux protéger /backoffice avec ROLE_ADMIN via access_control
+
+  access_control:
+    - { path: ^/api/login, roles: PUBLIC_ACCESS }
+    - { path: ^/api/token/refresh, roles: PUBLIC_ACCESS }
+
+    # Tout le reste de l'API = auth obligatoire
+    - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
+
+    # Admin
+    - { path: ^/admin, roles: ROLE_ADMIN }
