--- a/back/config/packages/nelmio_cors.yaml
+++ b/back/config/packages/nelmio_cors.yaml
@@ -1,7 +1,7 @@
 nelmio_cors:
   defaults:
     allow_credentials: true
-    allow_origin: []
+    allow_origin: [] # Allow all origins by default, but you can specify specific origins if needed
     allow_headers: ['Content-Type', 'Authorization']
     expose_headers: ['Link']
     allow_methods: ['GET', 'POST', 'PUT', 'PATCH', 'DELETE', 'OPTIONS']
