--- a/back/composer.json
+++ b/back/composer.json
@@ -88,6 +88,8 @@
             "assets:install %PUBLIC_DIR%": "symfony-cmd",
             "importmap:install": "symfony-cmd"
         },
+        "cs:check": "php-cs-fixer fix --dry-run --diff --verbose",
+        "cs:fix": "php-cs-fixer fix --verbose",
         "post-install-cmd": [
             "@auto-scripts"
         ],
@@ -105,6 +107,7 @@
         }
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.94",
         "phpunit/phpunit": "^11.5.55",
         "symfony/browser-kit": "7.4.*",
         "symfony/css-selector": "7.4.*",
