--- a/back/config/services.yaml
+++ b/back/config/services.yaml
@@ -25,3 +25,7 @@ services:
     App\Security\LoginSuccessHandler:
         arguments:
             $appEnv: '%kernel.environment%'
+
+    App\Service\FileStorageService:
+        arguments:
+            $projectDir: '%kernel.project_dir%'
